JavaCC/Interpreter/SLParser.java
/* Generated By:JavaCC: Do not edit this line. SLParser.java */
import java.util.*;

public class SLParser implements SLParserConstants {
    public static void main(String args[]) throws ParseException {
        SLParser        parser  = new SLParser(System.in);
        List<Statement> program = parser.stmntList();
                for (Statement stmnt: program) {
            System.out.println(stmnt);
                }
        for (Statement stmnt: program) {
            stmnt.execute();
        }
    }

// stmntList : statment stmntList 
//           | /* epsilon */
//           ;
  static final public List<Statement> stmntList() throws ParseException {
    Statement       s;
    List<Statement> l;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 3:
    case 6:
    case 9:
    case IDENTIFIER:
      s = statement();
      l = stmntList();
                                        l.add(0, s); {if (true) return l;}
      break;
    default:
      jj_la1[0] = jj_gen;
                                        {if (true) return new LinkedList<Statement>();}
    }
    throw new Error("Missing return statement in function");
  }

// statement : variable "=" expr ";"
//           | "print" "(" expr ")" ";"
//           | "if"    "(" boolExpr ")" "{" stmntList "}"
//           | "while" "(" boolExpr ")" "{" stmntList "}"
//           ;
  static final public Statement statement() throws ParseException {
    Variable v;
    BoolExpr b;
    Expr     r;
    List<Statement> l;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      v = variable();
      jj_consume_token(1);
      r = expr();
      jj_consume_token(2);
                                          {if (true) return new Assignment(v, r);}
      break;
    case 3:
      jj_consume_token(3);
      jj_consume_token(4);
      r = expr();
      jj_consume_token(5);
      jj_consume_token(2);
                                          {if (true) return new Print(r);}
      break;
    case 6:
      jj_consume_token(6);
      jj_consume_token(4);
      b = boolExpr();
      jj_consume_token(5);
      jj_consume_token(7);
      l = stmntList();
      jj_consume_token(8);
                                                               {if (true) return new IfThen(b, l);}
      break;
    case 9:
      jj_consume_token(9);
      jj_consume_token(4);
      b = boolExpr();
      jj_consume_token(5);
      jj_consume_token(7);
      l = stmntList();
      jj_consume_token(8);
                                                               {if (true) return new While (b, l);}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// boolExpr : expr "==" expr
//          | expr "<"  expr
//          ;            
  static final public BoolExpr boolExpr() throws ParseException {
    Expr l, r;
    l = expr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
      jj_consume_token(10);
      r = expr();
                                     {if (true) return new Equal   (l, r);}
      break;
    case 11:
      jj_consume_token(11);
      r = expr();
                                     {if (true) return new LessThan(l, r);}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// expr : product exprRest;
  static final public Expr expr() throws ParseException {
    Expr p, r;
    p = product();
    r = exprRest(p);
                                    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

// exprRest : '+' product exprRest
//          | '-' product exprRest
//          | /* epsilon */
//          ;
  static final public Expr exprRest(Expr s) throws ParseException {
    Expr p, a, r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      jj_consume_token(12);
      p = product();
                          a = new Sum       (s, p);
      r = exprRest(a);
                                                                        {if (true) return r;}
      break;
    case 13:
      jj_consume_token(13);
      p = product();
                          a = new Difference(s, p);
      r = exprRest(a);
                                                                        {if (true) return r;}
      break;
    default:
      jj_la1[3] = jj_gen;
                                                                        {if (true) return s;}
    }
    throw new Error("Missing return statement in function");
  }

// product : factor productRest;
  static final public Expr product() throws ParseException {
    Expr f, r;
    f = factor();
    r = productRest(f);
                                      {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

// productRest : '+' factor productRest
//             | '-' factor productRest
//             | /* epsilon */
//             ;
  static final public Expr productRest(Expr p) throws ParseException {
    Expr f, a, r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
      jj_consume_token(14);
      f = factor();
                         a = new Product (p, f);
      r = productRest(a);
                                                                        {if (true) return r;}
      break;
    case 15:
      jj_consume_token(15);
      f = factor();
                         a = new Quotient(p, f);
      r = productRest(a);
                                                                        {if (true) return r;}
      break;
    default:
      jj_la1[4] = jj_gen;
                                                                        {if (true) return p;}
    }
    throw new Error("Missing return statement in function");
  }

// factor : '(' expr ')'
//        | variable
//        | NUMBER
//        ;
  static final public Expr factor() throws ParseException {
    Expr  r, v;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 4:
      jj_consume_token(4);
      r = expr();
      jj_consume_token(5);
                           {if (true) return r;}
      break;
    case IDENTIFIER:
      v = variable();
                           {if (true) return v;}
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
                           {if (true) return new MyNumber(t.image);}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Variable variable() throws ParseException {
    Token t;
    t = jj_consume_token(IDENTIFIER);
                       {if (true) return new Variable(t.image);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  static public SLParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  static public Token token, jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static {
      jj_la1_0();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x200248,0x200248,0xc00,0x3000,0xc000,0x300010,};
   }

  public SLParser(java.io.InputStream stream) {
     this(stream, null);
  }
  public SLParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new SLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  public SLParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new SLParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  public SLParser(SLParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  public void ReInit(SLParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
  }

  static final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static final private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.Vector jj_expentries = new java.util.Vector();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  static public ParseException generateParseException() {
    jj_expentries.removeAllElements();
    boolean[] la1tokens = new boolean[22];
    for (int i = 0; i < 22; i++) {
      la1tokens[i] = false;
    }
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 6; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 22; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.addElement(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.elementAt(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  static final public void enable_tracing() {
  }

  static final public void disable_tracing() {
  }

}
